gccida/c0/check_insn_for_givs
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5766:1: error: use of undeclared identifier 'induction_1'
induction_1 *v; // [rsp+60h] [rbp-90h] 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5766:14: error: use of undeclared identifier 'v'
induction_1 *v; // [rsp+60h] [rbp-90h] 
             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5791:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v7 = ( unsigned __int16)**( _DWORD **)&pa[2] == 47 ? ( rtx)pa[2] : single_set_2( pa, *( rtx *)&pa[2]); 
                                                           ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5798:13: error: expected identifier or '('
 struct set = v6; 
            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5843:1: error: use of undeclared identifier 'v'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5843:20: error: expected expression
v = ( induction_1 *)xmalloc( 0xA8uLL); 
                   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5843:7: error: use of undeclared identifier 'induction_1'
v = ( induction_1 *)xmalloc( 0xA8uLL); 
      ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/loop.c:5853:1: error: use of undeclared identifier 'v'
v, 
^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_insn_for_givs/src/obj/loop.o] Error 1
